Features:
 * Added a small "cog" button to the objects window. Opens up a configuration popup.
 * Holding "shift" button will increase a camera speed when moving with arrow keys.

Fixes:
 * Subtypes without a different name from it's parent had the wrong name.

--------------------------------------
 v1.6.0 (2020-06-27)
--------------------------------------

Features:
 * Added support for UI scaling! Interface could be scaled from "Preferences" window.
 * Added switchable interface themes.
 * Added "Synchronize Maps View" option. When enabled all maps will share the same "camera" location.
   Helpful for multi-z maps with levels per-file.
 * "Edit Variables" window now has a "Reset Variable To Default" button for modified variables.
 * Added advanced "Unknown Types Replacer" tool. Works in the same way DM does.
   You open a map with unknown type - you are able to replace those types with something else.
   Tool also has a feature to modify objects variables as well.

Fixes:
 * Inability to switch between maps with the same name.

Tweaks:
 * "Show Modified Variables" toggle state won't be reset between "Edit Variables" windows.

--------------------------------------
 v1.5.0 (2020-05-26)
--------------------------------------

Features:
 * Added a fullscreen mode! Use "Window->Fullscreen" or F11 hotkey to toggle.

Fixes:
 * Incorrect window maximization on start. The window will cover the screen correctly.

--------------------------------------
 v1.4.0 (2020-05-24)
--------------------------------------

Features:
 * New appearance!
 * Added an option to sort variables by their type in the Edit Variables window.
 * Environment panel will show recent maps. Thus you can directly open the map in the corresponding environment.
 * Added a hotkey (F5) to Reset Windows state (initial sizes and position).

Tweaks:
 * Modified map will be highlighted with a color instead of the asterisk.
 * Variables preview window will collapse when the instance has initial variables.
