@@ -1,9 +1,12 @@
 Features:
  * Added a small "cog" button to the objects window. Opens up a configuration popup.
- * Holding "shift" button will increase a camera speed when moving with arrow keys.
+ * Holding the "shift" button will increase a panning speed when moving with arrow keys.
 
 Fixes:
  * Subtypes without a different name from it's parent had the wrong name.
+
+Tweaks:
+ * Added a changing of the mouse cursor while holding the "space" button to show the panning mode is changed.
 
 --------------------------------------
  v1.6.0 (2020-06-27)
